--- a/Starter3D/Starter3D.Application/ui/OpenGLWindow.xaml
+++ b/Starter3D/Starter3D.Application/ui/OpenGLWindow.xaml
@@ -2,10 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ui="clr-namespace:Starter3D.Application.ui"
+             xmlns:controller="clr-namespace:Starter3D.API.controller;assembly=Starter3D.API"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-  <Grid>
+  
+  <Grid Name="MainGrid">
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*"></ColumnDefinition>
+      <ColumnDefinition Width="Auto"></ColumnDefinition>
+
+    </Grid.ColumnDefinitions>
     <WindowsFormsHost Initialized="WindowsFormsHostInitialized"/>
   </Grid>
 </Window>
