Windows form host airspace fix

--- a/Starter3D/Starter3D.Application/ui/OpenGLWindow.xaml
+++ b/Starter3D/Starter3D.Application/ui/OpenGLWindow.xaml
@@ -4,16 +4,23 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:ui="clr-namespace:Starter3D.Application.ui"
-             xmlns:controller="clr-namespace:Starter3D.API.controller;assembly=Starter3D.API"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
   
-  <Grid Name="MainGrid">
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="*"></ColumnDefinition>
-      <ColumnDefinition Width="Auto"></ColumnDefinition>
-
-    </Grid.ColumnDefinitions>
-    <WindowsFormsHost Initialized="WindowsFormsHostInitialized"/>
+  <Grid >
+    <WindowsFormsHost  Name="OpenGlControl" Initialized="WindowsFormsHostInitialized"/>
+    <ui:AirspacePopup PlacementTarget="{Binding ElementName=OpenGlControl}"
+                         FollowPlacementTarget="True"
+                         AllowOutsideScreenPlacement="True"
+                         ParentWindow="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                         IsOpen="True"
+                         AllowsTransparency="True"
+                         Placement="Center"
+                         Width="{Binding ElementName=OpenGlControl, Path=ActualWidth}"
+                         Height="{Binding ElementName=OpenGlControl, Path=ActualHeight}">
+      <Grid Name="MainGrid">
+       
+      </Grid>
+    </ui:AirspacePopup>
   </Grid>
 </Window>
