--- a/Starter3D/Starter3D.Plugin.PixelShader/PixelShaderView.xaml
+++ b/Starter3D/Starter3D.Plugin.PixelShader/PixelShaderView.xaml
@@ -2,10 +2,36 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:pixelShader="clr-namespace:Starter3D.Plugin.PixelShader"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+  <UserControl.Resources>
+    <DataTemplate DataType="{x:Type pixelShader:ShaderViewModel}">
+      <TextBlock Text="{Binding Name}"></TextBlock>
+    </DataTemplate>
+  </UserControl.Resources>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"></RowDefinition>
+      <RowDefinition Height="*"></RowDefinition>
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="Auto"></ColumnDefinition>
+      <ColumnDefinition Width="*"></ColumnDefinition>
+    </Grid.ColumnDefinitions>
+    <Border Width="250" Margin="5" BorderThickness="1" BorderBrush="Black" CornerRadius="1">
+      <Border.Background>
+        <SolidColorBrush Color="#AAFFFFFF"></SolidColorBrush>
+      </Border.Background>
+      <Grid Margin="5">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Select a pixel shader:"></TextBlock>
+        <ComboBox Grid.Row="1" ItemsSource="{Binding Shaders}" SelectedItem="{Binding CurrentShader}"></ComboBox>
+      </Grid>
+    </Border>
+  </Grid>
 </UserControl>
