--- a/Starter3D/Starter3D.Plugin.MaterialEditor/MaterialEditorView.xaml
+++ b/Starter3D/Starter3D.Plugin.MaterialEditor/MaterialEditorView.xaml
@@ -2,11 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Width="100"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialEditor="clr-namespace:Starter3D.Plugin.MaterialEditor"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
+  <UserControl.Resources>
+    <DataTemplate DataType="{x:Type materialEditor:MaterialViewModel}">
+      <TextBlock Text="{Binding Material.Name}"></TextBlock>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type materialEditor:ShapeViewModel}">
+      <TextBlock Text="{Binding Shape.Shape.Name}"></TextBlock>
+    </DataTemplate>
+  </UserControl.Resources>
   <Grid>
     <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"></RowDefinition>
       <RowDefinition Height="Auto"></RowDefinition>
       <RowDefinition Height="*"></RowDefinition>
     </Grid.RowDefinitions>
@@ -14,6 +24,32 @@
       <ColumnDefinition Width="Auto"></ColumnDefinition>
       <ColumnDefinition Width="*"></ColumnDefinition>
     </Grid.ColumnDefinitions>
-    <Button>Test</Button>
+    <Border Grid.Column="0" Grid.Row="0" Width="250" Margin="5" BorderThickness="1" BorderBrush="Black" CornerRadius="1">
+      <Border.Background>
+        <SolidColorBrush Color="#AAFFFFFF"></SolidColorBrush>
+      </Border.Background>
+      <Grid Margin="5">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Select a shape:"></TextBlock>
+        <ComboBox Grid.Row="1" ItemsSource="{Binding Shapes}" SelectedItem="{Binding CurrentShape}"></ComboBox>
+      </Grid>
+    </Border>
+    <Border Grid.Column="0" Grid.Row="1" Width="250" Margin="5" BorderThickness="1" BorderBrush="Black" CornerRadius="1">
+      <Border.Background>
+        <SolidColorBrush Color="#AAFFFFFF"></SolidColorBrush>
+      </Border.Background>
+      <Grid Margin="5">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Select a material:"></TextBlock>
+        <ComboBox Grid.Row="1" ItemsSource="{Binding Materials}" SelectedItem="{Binding CurrentMaterial}"></ComboBox>
+      </Grid>
+    </Border>
+    
   </Grid>
 </UserControl>
