--- a/Starter3D/Starter3D.Application/ui/OpenGLWindow.xaml
+++ b/Starter3D/Starter3D.Application/ui/OpenGLWindow.xaml
@@ -6,10 +6,15 @@
              xmlns:ui="clr-namespace:Starter3D.Application.ui"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-  
-  <Grid >
-    <WindowsFormsHost  Name="OpenGlControl" Initialized="WindowsFormsHostInitialized"/>
-    <ui:AirspacePopup PlacementTarget="{Binding ElementName=OpenGlControl}"
+
+  <DockPanel Name="MainDock">
+    <Grid Name="LeftGrid" DockPanel.Dock="Left"></Grid>
+    <Grid Name="RightGrid" DockPanel.Dock="Right"></Grid>
+    <Grid Name="TopGrid" DockPanel.Dock="Top"></Grid>
+    <Grid Name="BottomGrid" DockPanel.Dock="Bottom"></Grid>
+    <Grid >
+      <WindowsFormsHost  Name="OpenGlControl" Initialized="WindowsFormsHostInitialized"/>
+      <ui:AirspacePopup PlacementTarget="{Binding ElementName=OpenGlControl}"
                          FollowPlacementTarget="True"
                          AllowOutsideScreenPlacement="True"
                          ParentWindow="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
@@ -18,9 +23,10 @@
                          Placement="Center"
                          Width="{Binding ElementName=OpenGlControl, Path=ActualWidth}"
                          Height="{Binding ElementName=OpenGlControl, Path=ActualHeight}">
-      <Grid Name="MainGrid">
-       
-      </Grid>
-    </ui:AirspacePopup>
-  </Grid>
+        <Grid Name="MainGrid">
+
+        </Grid>
+      </ui:AirspacePopup>
+    </Grid>
+  </DockPanel>
 </Window>
