--- a/Starter3D/Starter3D.Plugin.SceneGraph/SceneGraphView.xaml
+++ b/Starter3D/Starter3D.Plugin.SceneGraph/SceneGraphView.xaml
@@ -3,13 +3,69 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:scenegraph="clr-namespace:Starter3D.Plugin.SceneGraph"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
   <UserControl.Resources>
-    
+    <DataTemplate DataType="{x:Type scenegraph:NumericParameterViewModel}">
+      <Grid Margin="2">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Text="{Binding Name}"></TextBlock>
+        <Slider Grid.Row="1" Value="{Binding Value}" Minimum="0" Maximum="100"></Slider>
+      </Grid>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type scenegraph:VectorParameterViewModel}">
+      <Grid Margin="2">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Text="{Binding Name}"></TextBlock>
+        <Slider Grid.Row="1" Value="{Binding X}" Minimum="-100" Maximum="100"></Slider>
+        <Slider Grid.Row="2" Value="{Binding Y}" Minimum="-100" Maximum="100"></Slider>
+        <Slider Grid.Row="3" Value="{Binding Z}" Minimum="-100" Maximum="100"></Slider>
+      </Grid>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type scenegraph:InteractiveShapeViewModel}">
+      <Grid Margin="2">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <ContentPresenter Content="{Binding Translation}"></ContentPresenter>
+        <ContentPresenter Grid.Row="1" Content="{Binding Scaling}"></ContentPresenter>
+      </Grid>
+    </DataTemplate>
   </UserControl.Resources>
   <Grid>
-    
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"></RowDefinition>
+      <RowDefinition Height="Auto"></RowDefinition>
+      <RowDefinition Height="*"></RowDefinition>
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="Auto"></ColumnDefinition>
+      <ColumnDefinition Width="*"></ColumnDefinition>
+    </Grid.ColumnDefinitions>
+    <Border Grid.Column="0" Grid.Row="0" Width="250" Margin="5" BorderThickness="1" BorderBrush="Black" CornerRadius="1">
+      <Border.Background>
+        <SolidColorBrush Color="#AAFFFFFF"></SolidColorBrush>
+      </Border.Background>
+      <Grid Margin="5">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Edit selected shape:"></TextBlock>
+        <ContentPresenter Grid.Row="2" Content="{Binding SelectedShape}"></ContentPresenter>
+      </Grid>
+    </Border>
 
   </Grid>
 </UserControl>
