Added point size and line width configuration for opengl

--- a/Starter3D/Starter3D.Plugin.CurveEditor/CurveEditorView.xaml
+++ b/Starter3D/Starter3D.Plugin.CurveEditor/CurveEditorView.xaml
@@ -3,10 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:curveEditor="clr-namespace:Starter3D.Plugin.CurveEditor"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
   <UserControl.Resources>
-    
+    <DataTemplate DataType="{x:Type curveEditor:SplineViewModel}">
+      <Grid>
+        <TextBlock Text="{Binding Spline.Name}"></TextBlock>
+      </Grid>
+    </DataTemplate>
   </UserControl.Resources>
   <Grid>
     <Grid.RowDefinitions>
@@ -25,9 +30,13 @@
         <Grid.RowDefinitions>
           <RowDefinition Height="Auto"></RowDefinition>
           <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
+          <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Select the step size:"></TextBlock>
         <Slider Grid.Row="1" Value="{Binding Step}" Minimum="0.01" Maximum="1"></Slider>
+        <TextBlock Grid.Row="2" Text="Select a spline:"></TextBlock>
+        <ComboBox Grid.Row="3" ItemsSource="{Binding Splines}" SelectedItem="{Binding SelectedSpline}"></ComboBox>
       </Grid>
     </Border>
   </Grid>
